[package]
name = "RustTopologic"
version = "1.0.0"
links = "libtopologic.a"
authors = ["BTMichalowicz <benjaminmichalowicz98@gmail.com>", "Matthew Stern <msstern98@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"

[build-dependencies]
cc = { version ="1.0", features=["parallel"] }
pkg-config = "0.3"
